--- a/.storybook/manager-head.html
+++ b/.storybook/manager-head.html
@@ -33,3 +33,10 @@
     color: var(--pico-color-azure-200);
   }
 </style>
+<meta
+  property="og:title"
+  content="The listAtom extension for 👻 Jotai form-atoms."
+/>
+<meta property="og:type" content="React library" />
+<meta property="og:url" content="https://github.com/form-atoms/list-atom" />
+<meta property="og:image" content="./form-atoms-banner.png" />
