docs: og update links

--- a/.storybook/manager-head.html
+++ b/.storybook/manager-head.html
@@ -38,5 +38,8 @@
   content="The listAtom extension for 👻 Jotai form-atoms."
 />
 <meta property="og:type" content="React library" />
-<meta property="og:url" content="https://github.com/form-atoms/list-atom" />
-<meta property="og:image" content="./form-atoms-banner.png" />
+<meta property="og:url" content="https://form-atoms.github.io/list-atom/" />
+<meta
+  property="og:image"
+  content="https://form-atoms.github.io/list-atom//form-atoms-banner.png"
+/>
